--- a/my-amazon-clone/src/components/ProductList/ProductList.css
+++ b/my-amazon-clone/src/components/ProductList/ProductList.css
@@ -7,13 +7,15 @@ section {
     color: #000;
 
 }
-.header{
+
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
     padding: 20px;
 }
+
 .grid {
     width: 100%;
     min-height: 100vh;
@@ -21,16 +23,18 @@ section {
     background-color: #FFFFFF;
     grid-template-columns: .2fr 1fr;
 }
+
 label {
     font-family: sans-serif;
     font-size: 1rem;
     padding-right: 10px;
-  }
-  
-  select {
+}
+
+select {
     font-size: 0.9rem;
     padding: 2px 5px;
-  }
+}
+
 .grid .filter {
     padding-bottom: 59px;
     margin-top: 100px;
@@ -111,21 +115,24 @@ label {
 }
 
 /* serch products start */
-.filter-box{
+.filter-box {
     margin: 0 auto;
     width: 20%;
 }
-.filter-box label{
+
+.filter-box label {
     padding: 12px 18px;
 }
-.filter-box input{
+
+.filter-box input {
     padding: 4px 8px;
     margin-left: 20px;
     border-radius: 3px;
     font-size: 1.2rem;
     border: 2px solid rgb(32, 31, 31);
 }
-.same-brands{
+
+.same-brands {
     font-size: 2.5rem;
     font-weight: 700;
     margin-top: 30px;
@@ -134,30 +141,34 @@ label {
 
 
 /* Filter options start  */
-.filter-page{
+.filter-page {
     display: flex;
     flex-direction: column;
     gap: 15px;
-  
+
 }
 
-.filter-page h3{
+.filter-page h3 {
     margin-bottom: 10px;
 }
-.brand-name{
+
+.brand-name {
     color: #000;
 }
-.filter-page .price{
+
+.filter-page .price {
     cursor: pointer;
 }
+
 .color-filter {
- display: flex;
- flex-direction: column;
- gap: 10px;
- padding: 15px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 15px 0;
 
 }
-.color-filter .box{
+
+.color-filter .box {
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -176,7 +187,17 @@ label {
     cursor: pointer;
 }
 
-.hover:hover{
+.hover:hover {
     color: red;
     cursor: pointer;
+}
+
+form .serch-box {
+    padding: 12px 15px; 
+    margin-left: -20px;
+    margin-top: -20px;
+    outline: 2px solid #dadada; 
+    border-radius: 3px;
+    font-size: 1.2rem;
+    /* border: 2px solid rgb(32, 31, 31); */
 }
