--- a/my-amazon-clone/src/components/Home/Home.css
+++ b/my-amazon-clone/src/components/Home/Home.css
@@ -1,6 +1,7 @@
 .home-container {
-    width: 100%;
-    height: 290px;
+    position: relative;
+    padding-top: 25vh;
+    height: 500px;
     background-image: url('https://images-eu.ssl-images-amazon.com/images/G/31/img22/Wireless/devjyoti/GW/Uber/Nov/D103625178_DesktopTallHero_3000x1200._CB574597993_.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -8,12 +9,12 @@
 }
 
 .card-con {
-
+    position: relative;
     width: 100%;
     height: 100vh;
-    background-color: #E3E6E6;
     display: flex;
     gap: 20px;
+    bottom: 45vh;
 }
 
 .card-con .card {
@@ -40,7 +41,8 @@
     width: 120px;
     margin: 5px;
 }
-.box img{
+
+.box img {
     width: 100%;
     height: 100%;
     object-fit: contain;
