--- a/my-amazon-clone/src/components/Navbar/Navbar.css
+++ b/my-amazon-clone/src/components/Navbar/Navbar.css
@@ -1,50 +1,58 @@
 nav {
+    width: 100%;
     display: flex;
     flex-direction: column;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 99;
+    z-index: 999;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
+    background-color: #131921;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+  
 
 }
 
 
-.nav-part1 {
+nav .nav-part1 {
     width: 100%;
-    background-color: #131921;
+    overflow: hidden;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: monospace;
-    overflow: hidden;
-    color: #fff;
     height: 60px;
-    font-family: Arial, Helvetica, sans-serif;
-
 }
 
-/* .border {
+.border {
     border: 1.5px solid transparent;
- 
-} */
+}
 
+.border:hover {
+    border: 2px solid white;
+}
+
+.nav-part1 .left a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav-part1 .left a p{
+    position: relative;
+    right: 10px;
+    bottom: 3px;
+}
 .nav-part1 .left .nav-logo {
-    height: 150px;
+    height: 50px;
     width: 120px;
 }
 
-.nav-part1 .left .nav-logo:hover {
-    border: 1.5px solid rgb(174, 171, 171);
-    cursor: pointer;
-}
 
 .nav-part1 .left .nav-logo img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 .nav-part1 .left {
@@ -59,6 +67,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 50px;
 }
 
 .nav-part1 .line-1 {
@@ -75,10 +84,6 @@ nav {
     font-weight: 700;
 }
 
-.nav-location:hover {
-    border: 1.5px solid rgb(174, 171, 171);
-    cursor: pointer;
-}
 
 .nav-part1 .left .nav-location .locatin-icon {
     margin-top: 8px;
@@ -89,13 +94,15 @@ nav {
 
 }
 
-
-
 .nav-part1 .nav-search {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 620px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
 .nav-part1 .nav-search select {
@@ -112,11 +119,12 @@ nav {
     padding: 0px 5px;
 }
 
-input[type="text"] {
+.nav-search input[type="text"] {
     border: none;
     font-size: 13px;
     width: 100%;
     height: 40px;
+    outline: none;
 
 }
 
@@ -135,9 +143,13 @@ input[type="text"] {
     cursor: pointer;
 }
 
+nav form:hover {
+    border: 3px solid #FF9900;
+    background-color: #F3A847;
+}
+
 .nav-part1 span {
     display: block;
-
 }
 
 .nav-part1 .right {
@@ -150,6 +162,7 @@ input[type="text"] {
 
 .nav-part1 .right .account-types {
     margin: 0 auto;
+    
 }
 
 .nav-part1 .right .nav-cart {
@@ -174,7 +187,7 @@ input[type="text"] {
     padding: 0px 0px;
     font-size: 12px;
     color: #F3A847;
-  
+
 }
 
 /* start nav-part2  */
@@ -202,23 +215,26 @@ a {
     justify-content: center;
     align-items: center;
     gap: 4px;
-  
+
 }
-.nav-part2 .left i{
+
+.nav-part2 .left i {
     font-size: 1.5rem;
 
 }
 
-.nav-part2 .shop-container{
+.nav-part2 .shop-container {
     min-width: 547px;
+    width: 100%;
 }
+
 .nav-part2 .shop-link {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
-.nav-part2 .shop-link li a{
+.nav-part2 .shop-link li a {
     font-size: 1rem;
     padding: 8px 10px;
 }
