--- a/counterApp/src/index.css
+++ b/counterApp/src/index.css
@@ -16,6 +16,7 @@ body {
 
 header {
     padding: 0 120px;
+    box-shadow: 0 4px 2px -2px rgba(0, 0, 0, .2);
 }
 
 header,
@@ -24,10 +25,11 @@ main {
 
 }
 
-main{
+main {
     margin-top: 85px;
     height: 100vh;
 }
+
 .dark {
     background-color: #282828;
     color: #ffffff;
@@ -37,7 +39,8 @@ main{
     background-color: #1F2020;
     color: #ffffff;
 }
-.center{
+
+.center {
     position: absolute;
     top: 20%;
     left: 50%;
@@ -46,4 +49,107 @@ main{
     font-weight: 800;
     color: #1F2020;
     opacity: 0.6;
+}
+
+.search_active {
+    border-radius: 2px;
+}
+
+.round {
+    border-radius: 50px;
+
+}
+
+.menu_btn {
+    display: none;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.suggestion_div {
+    background-color: #E5E7EB;
+}
+
+@media (max-width:1024px) {
+    header {
+        padding: 0 30px;
+    }
+
+
+    main {
+        padding: 0 30px;
+    }
+}
+
+@media (max-width:820px) {
+    .browseall {
+        display: none;
+    }
+}
+
+@media (max-width:768px) {
+    .nav_link {
+        display: none;
+    }
+
+    .search_input {
+        flex: 1;
+
+    }
+
+    #navbar .nav_link {
+        width: 0;
+        height: 100vh;
+        overflow: hidden;
+        position: fixed;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-direction: column;
+        left: 0;
+        top: 0;
+        padding-top: 30px;
+        background-color: black;
+        color: white;
+        transition: width .3s ease-in;
+
+    }
+
+    #navbar .nav_link.open {
+        width: 288px;
+    }
+
+    .nav_link li {
+        margin-left: 30px;
+    }
+
+    .nav_link .nav_close {
+        margin-left: 0;
+       display: block;
+    }
+
+    .browseall {
+        display: block;
+    }
+
+    .menu_btn {
+        display: flex;
+    }
+
+}
+
+@media (max-width:600px) {
+
+
+    .search_box {
+        display: none;
+    }
+
+    .search_icon {
+        display: block;
+    }
+
+    .result_page {
+        margin-top: 80px;
+    }
 }
